--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/header.css">
-    <link rel="stylesheet" href="/styles/anuncio.css">
-    <link rel="stylesheet" href="/styles/pelicula.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/anuncio.css">
+    <link rel="stylesheet" href="styles/pelicula.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.17/dist/css/splide.min.css">
     <link rel="icon" href="https://static-mh.content.disney.io/matterhorn/assets/favicon-94e3862e7fb9.ico">
     <title>Disney Latino | El sitio oficial de todas las cosas Disney</title>
@@ -164,7 +164,7 @@
         </div>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.17/dist/js/splide.min.js"></script>
-<script src="/javascript/head.js"></script>
-<script src="/javascript/carrusel.js"></script>
+<script src="javascript/head.js"></script>
+<script src="javascript/carrusel.js"></script>
 </body>
 </html>
