--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/anuncio.css">
     <link rel="stylesheet" href="styles/pelicula.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.17/dist/css/splide.min.css">
+    <link rel="stylesheet" href="styles/segundo__carrusel.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.17/dist/css/themes/splide-sea-green.min.css">
+    <link rel="stylesheet" href="styles/novedades.css">
     <link rel="icon" href="https://static-mh.content.disney.io/matterhorn/assets/favicon-94e3862e7fb9.ico">
     <title>Disney Latino | El sitio oficial de todas las cosas Disney</title>
 </head>
@@ -91,7 +93,7 @@
             <img src="https://tpc.googlesyndication.com/simgad/5303454029622295960" alt="Anuncio">
         </div>
     </section>
-    <div class="splide" role="group" aria-label="Splide Basic HTML Example">
+    <div class="splide" role="group" aria-label="carrusel">
         <div class="splide__track">
               <ul class="splide__list">
                   <li class="splide__slide">
@@ -163,6 +165,76 @@
               </ul>
         </div>
     </div>
+    <section class="seccion__novedades">
+        <div class="novedades__container">
+            <div class="novedades__titulo">
+                <span class="letra">Novedades Disney</span>
+            </div>
+            <ul class="novedades__lista">
+                <li class="novedades__lista__li">
+                    <div class="contenedor">
+                        <div class="novedad__img">
+                            <img src="https://lumiere-a.akamaihd.net/v1/images/au_article_starwars_andor5things_2_16x9_61d2d7fd.jpeg?region=299,0,767,767&width=320" alt="">
+                        </div>
+                        <div class="novedad__text">
+                            <div class="novedad__titulo">NOVEDADES STAR WARS <p>21 Sep.</p></div>
+                            <div class="novedad__descripcion">
+                                <div>
+                                    Los 3 motivos para ver los 3 primeros capítulos de <i>Andor</i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="novedades__lista__li">
+                    <div class="contenedor">
+                        <div class="novedad__img">
+                            <img src="https://lumiere-a.akamaihd.net/v1/images/63247562bde4cd000170bb54-image_12798158.jpeg?region=336,0,864,864&width=320" alt="">
+                        </div>
+                        <div class="novedad__text">
+                            <div class="novedad__titulo">
+                                NOVEDADES STAR WARS <p>21 Sep.</p></div>
+                            <div class="novedad__descripcion">
+                                <div>
+                                    Las 5 curiosidades sobre Diego Luna, protagonista de <i>Andor</i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+            <div id="slider2" class="splide" role="group" aria-label="Splide Basic HTML Example">
+                <div class="splide__track">
+                      <ul class="splide__list">
+                          <li class="splide__slide">
+                            <div class="segundo__carrusel__container">
+                                <div class="segundo__carrusel__img">
+                                    <img src="https://lumiere-a.akamaihd.net/v1/images/pp_disneyplusoriginals_hocuspocus2_herobanner_mobile_36_97765670.jpeg?region=0,25,640,255&width=480" alt="protagonistas abracadabra">
+                                </div>
+                                <div class="segundo__carrusel__txt"><span>¿Cómo están en la actualidad las protagonistas de Abracadabra?</span></div>
+                            </div>
+                          </li>
+                          <li class="splide__slide">
+                            <div class="segundo__carrusel__container">
+                                <div class="segundo__carrusel__img">
+                                    <img src="https://lumiere-a.akamaihd.net/v1/images/pp_disneyplusoriginals_hocuspocus2_herobanner_mobile_36_97765670.jpeg?region=0,25,640,255&width=480" alt="protagonistas abracadabra">
+                                </div>
+                                <div class="segundo__carrusel__txt"><span>¿Cómo están en la actualidad las protagonistas de Abracadabra?</span></div>
+                            </div>
+                          </li>
+                          <li class="splide__slide">
+                            <div class="segundo__carrusel__container">
+                                <div class="segundo__carrusel__img">
+                                    <img src="https://lumiere-a.akamaihd.net/v1/images/pp_disneyplusoriginals_hocuspocus2_herobanner_mobile_36_97765670.jpeg?region=0,25,640,255&width=480" alt="protagonistas abracadabra">
+                                </div>
+                                <div class="segundo__carrusel__txt"><span>¿Cómo están en la actualidad las protagonistas de Abracadabra?</span></div>
+                            </div>
+                          </li>
+                      </ul>
+                </div>
+            </div>
+    </section>
 <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.17/dist/js/splide.min.js"></script>
 <script src="javascript/head.js"></script>
 <script src="javascript/carrusel.js"></script>
