parte del carrusel de videos

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/pelicula.css">
     <link rel="stylesheet" href="styles/segundo__carrusel.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.17/dist/css/themes/splide-sea-green.min.css">
+    <link rel="stylesheet" href="styles/carrusel__videos.css">
     <link rel="stylesheet" href="styles/novedades.css">
     <link rel="icon" href="https://static-mh.content.disney.io/matterhorn/assets/favicon-94e3862e7fb9.ico">
     <title>Disney Latino | El sitio oficial de todas las cosas Disney</title>
@@ -210,9 +211,27 @@
                           <li class="splide__slide">
                             <div class="segundo__carrusel__container">
                                 <div class="segundo__carrusel__img">
-                                    <img src="https://lumiere-a.akamaihd.net/v1/images/pp_disneyplusoriginals_hocuspocus2_herobanner_mobile_36_97765670.jpeg?region=0,25,640,255&width=480" alt="protagonistas abracadabra">
+                                    <img src="https://lumiere-a.akamaihd.net/v1/images/pantera_negra_-_wakanda_por_siempre_b5a0c156.png?region=0,145,743,297" alt="Wakanda para Siempre">
                                 </div>
-                                <div class="segundo__carrusel__txt"><span>¿Cómo están en la actualidad las protagonistas de Abracadabra?</span></div>
+                                <div class="segundo__carrusel__txt"><span>Pantera Negra: Wakanda por siempre tiene un nuevo tráiler y póster</span></div>
+                            </div>
+                          </li>
+                          <li class="splide__slide">
+                            <div class="segundo__carrusel__container">
+                                <div class="segundo__carrusel__img">
+                                    <img src="https://lumiere-a.akamaihd.net/v1/images/starwars_90d7ce57.jpeg?region=0,0,1280,511&width=1200" alt="protagonistas abracadabra">
+                                </div>
+                                <div class="segundo__carrusel__txt"><span>Línea de tiempo de Star Wars: 4 datos para entender en ué orden ocurren las series y peliculas</span></div>
+                            </div>
+                          </li>
+                          <li class="splide__slide">
+                            <div class="segudo__carrusel__contaier">
+                                <div class="segundo__carrusel__img">
+                                    <img src="https://lumiere-a.akamaihd.net/v1/images/hocuspocus2_sop_branded_cd7fccbd.jpeg?region=0,95,1620,647&width=1200" alt="Abracadabra">
+                                </div>
+                                <div class="segundo__carrusel__txt">
+                                    <span>Abracadabra 2: qué personajes de la primera película aparecen</span>
+                                </div>
                             </div>
                           </li>
                           <li class="splide__slide">
@@ -224,17 +243,63 @@
                             </div>
                           </li>
                           <li class="splide__slide">
-                            <div class="segundo__carrusel__container">
+                            <div class="segudo__carrusel__contaier">
                                 <div class="segundo__carrusel__img">
-                                    <img src="https://lumiere-a.akamaihd.net/v1/images/pp_disneyplusoriginals_hocuspocus2_herobanner_mobile_36_97765670.jpeg?region=0,25,640,255&width=480" alt="protagonistas abracadabra">
+                                    <img src="https://lumiere-a.akamaihd.net/v1/images/deadpool_3_5e0d810b.jpeg?region=0,63,780,312" alt="Deadpool">
                                 </div>
-                                <div class="segundo__carrusel__txt"><span>¿Cómo están en la actualidad las protagonistas de Abracadabra?</span></div>
+                                <div class="segundo__carrusel__txt">
+                                    <span>Ryan Reynolds y Hugh jackman une fuerzas en Deadpool 3</span>
+                                </div>
                             </div>
                           </li>
                       </ul>
                 </div>
             </div>
     </section>
+    <section class="videos">
+        <div class="video__reproduccion">
+            <div class="btn__cerrar__video"></div>
+            <div class="videoplaying">
+                <iframe width="640" height="360" src="https://secure.disney.com/embed/5ea2664afd4bbebd6b4f2a72?domain=disneylatino.com" allowfullscreen frameborder="0"></iframe><br/><a href="https://disneylatino.com/video/un-mundo-extra%C3%B1o-el-elenco-reacciona-al-trailer-">Un Mundo Extraño | El elenco reacciona al tráiler</a>
+            </div>
+        </div>
+        <div class="titulo">
+            <span>
+                videos
+            </span>
+        </div>
+        <div id="slidervideos" class="splide" role="group" aria-label="Splide Basic HTML Example">
+            <div class="splide__track">
+                  <ul class="splide__list">
+                      <li class="splide__slide">
+                        <div class="miniatura">
+                            <img src="https://lumiere-a.akamaihd.net/v1/images/image_e9095faa.jpeg?region=0,0,1920,1080&width=1200" alt="Un mundo Extraño">
+                            <div class="tiempo__video"><span>
+                                0:26
+                            </span></div>
+                        </div>
+                      </li>
+                      <li class="splide__slide">
+                        <div class="miniatura">
+                            <img src="https://lumiere-a.akamaihd.net/v1/images/image_e9095faa.jpeg?region=0,0,1920,1080&width=1200" alt="Un mundo Extraño">
+                            <div class="tiempo__video"><span>
+                                0:26
+                            </span></div>
+                        </div>
+                      </li>
+                      <li class="splide__slide">
+                         <div class="miniatura">
+                            <img src="https://lumiere-a.akamaihd.net/v1/images/image_e9095faa.jpeg?region=0,0,1920,1080&width=1200" alt="Un mundo Extraño">
+                            <div class="tiempo__video"><span>
+                                0:26
+                            </span></div>
+                        </div>
+                      </li>
+                  </ul>
+            </div>
+          </div>
+    </section>
+    <script src="javascript/videos.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.17/dist/js/splide.min.js"></script>
 <script src="javascript/head.js"></script>
 <script src="javascript/carrusel.js"></script>
